--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
     
     <div class="background-div" style="background-color: rgba(255, 255, 255, 0.9); width: 90%;">
 
-        <a href="/" class="btn orange darken-2">goat tower</a>
+        <a href="/dance-goat-dance/" class="btn orange darken-2">goat tower</a>
 
         <div>
             <h2>QUIZ</h2>
