fixed broken link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div id="modal1" class="modal">
                 <div class="modal-content">
                 <h4>This is a kid</h4>
-                <img src="/assets/kid.webp" width="100%">
+                <img src="/dance-goat-dance/assets/kid.webp" width="100%">
                 </div>
                 <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">I agree, that is a kid</a>
